# water-simulator-cpp

./: .bazelrc  .clang-format  .gitignore  .gitmodules  BUILD  MODULE.bazel  Makefile  README.md
scripts/: flamegraph.sh
toolchain/: cc_toolchain_config.bzl
water_simulator/: BUILD  variables.bzl
water_simulator/engine/: BUILD  engine.cc  engine.h  raycast.cc  state.cc  state.h  sycl_engine.cc
water_simulator/renderer/: BUILD  algebra.cc  algebra.h  camera.cc  camera.h  gl_error_macro.cc  gl_error_macro.h  renderer.cc  renderer.h  shader.cc  shader.h  shader_context_manager.cc  shader_context_manager.h  texture.cc  texture.h
water_simulator/renderer/entities/: BUILD  ball.cc  ball.h  container.cc  container.h  light.cc  light.h  sycl_water_normals.cc  water.cc  water.h  water_normals.cc  water_normals.h
water_simulator/renderer/shaders/: BUILD  basic_lighting.vs  shader.frag  shader.vert
